[package]
name = "mofish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.16", features = ["blocking"] }
scraper = "0.16.0"
select = "0.6.0"
serde = {version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.27.0",  features = ["full"] }
clap = {version = "4.3.11", features = ["derive"] }
axum = "0.6.18"
async-trait = "0.1.71"
pretty_env_logger = "0.5.0"
log = "0.4.19"
tower-http = {version = "0.4.1", features = ["cors"] }
readability = "0.2.0"
url = "2.4.0"
sqlite = "0.30.3"
chrono = "0.4.26"
anyhow = "1.0.71"
